@@ -18,7 +18,7 @@ ul.sub-menu > li:before {
 
 .box-title .box-content a,
 .box-description .box-content {
-    padding: 0.8em;
+    padding: 0 0.8em;
 }
 
 .box-grid {
